# ArchProject

./: CMakeLists.txt  README.md  assm2hex.py
src/: assm.2.txt  assm.3.txt  assm.txt  assm2hex.py  cfg.2.txt  cfg.txt  cscope.out  defines.h  func_table.h  functions.h  inst_decode.h  main.cpp  memin.2.txt  memin.txt  printers.cpp  printers.hpp  queue.h  register.h  sync_block.h  tags  trace.cpp  trace.h  vq.cpp  vq.h
test1/: assm.txt  memin.txt  memout.txt  regout.txt  tracecdb.txt  traceinst.txt
test2/: assm.txt  cfg.txt  memin.txt  memout.txt  regout.txt  tracecdb.txt  traceinst.txt
test3/: assm.txt  cfg.txt  memin.txt  memout.txt  regout.txt  tracecdb.txt  traceinst.txt
test_example/: assm.txt  memin.txt  memout.txt  regout.txt  tracecdb.txt  traceinst.txt
